updated: Account layout, sign-in refresh bug, NavBar items visibility based on login, use of querystring for passing confirmation messages to components.

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,27 @@ body {
   margin: 1em;
 }
 
+.confirmation-message {
+  display: inline-block;
+  /* border-style: solid; */
+  /* border-width: 2px; */
+  /* border-color: green; */
+  /* background-color: lightgreen; */
+  color: blue;
+  font-weight: bold;
+  padding: .5em;
+  margin: 1em;
+}
+
+.alert-message {
+  display: inline-block;
+  color: blue;
+  font-weight: bold;
+  /* background-color: lightgreen; */
+  padding: .5em;
+  margin: 1em;
+}
+
 .flex-container {
   display:flex;
   flex-direction: row;
@@ -96,3 +117,17 @@ body {
   width: 50%;
   margin: 0, auto;
 }
+
+.account-info-container {
+  background-color: aliceblue;
+  margin: 1em;
+  padding: 1em;
+  flex:50%;
+  display:flex;
+  flex-direction: column;
+}
+
+.form-label {
+  font-weight: bold;
+}
+
